--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,16 +17,7 @@
             "./node_modules/@types"
         ],
         "lib": [ "es2015", "dom" ],
-        "baseUrl": "./src",
-        "paths": {
-            "@components": ["./components"],
-            "@components/*": ["./components/*"],
-            "@constants/*": ["./constants/*"],
-            "@hooks/*": ["./hooks/*"],
-            "@store/*": ["./store/*"],
-            "@services/*": ["./services/*"],
-            "@utils/*": ["./utils/*"]
-        }
+        "baseUrl": "./src"
     },
     "exclude": [
         "**/node_modules", 
