--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/arcgis-js-api": "^4.17.0",
     "@types/classnames": "^2.2.10",
     "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.37",
     "@types/react": "^16.9.52",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.11",
