--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@esri/arcgis-rest-types": "^3.0.5",
     "@types/arcgis-js-api": "^4.17.0",
     "@types/classnames": "^2.2.10",
+    "@types/d3": "^5.16.3",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.37",
     "@types/react": "^16.9.52",
@@ -88,10 +89,11 @@
   "dependencies": {
     "@esri/arcgis-rest-feature-layer": "^3.0.5",
     "@esri/arcgis-rest-request": "^3.0.0",
-    "@reduxjs/toolkit": "^1.4.0",
-    "axios": "^0.19.2",
+    "@reduxjs/toolkit": "^1.5.1",
+    "axios": "^0.21.1",
     "calcite-web": "github:Esri/calcite-web#v1.2.5",
     "classnames": "^2.2.6",
+    "d3": "^5.16.0",
     "esri-loader": "^2.15.0",
     "helper-toolkit-ts": "^1.1.13",
     "react": "^16.13.1",
