--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "d3": "^5.16.0",
     "esri-loader": "^2.15.0",
     "helper-toolkit-ts": "^1.1.13",
+    "isomorphic-fetch": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
