--- a/package.json
+++ b/package.json
@@ -6,22 +6,10 @@
   "title": "UnemploymentPulse",
   "scripts": {
     "test": "jest --passWithNoTests",
-    "start": "webpack-dev-server --mode development --open",
+    "start": "webpack serve --mode development --open",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
     "download-data": "tsc -p ./scripts/tsconfig.json && node ./scripts/compiled/index.js"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "src/**/*.{ts,tsx,json}": [
-      "jest --bail --passWithNoTests",
-      "prettier --write",
-      "eslint --fix src/"
-    ]
   },
   "repository": {
     "type": "git",
@@ -35,74 +23,77 @@
   },
   "homepage": "https://livingatlas.arcgis.com/unemploymentpulse/",
   "devDependencies": {
-    "@babel/core": "^7.11.6",
+    "@babel/core": "^7.14.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/polyfill": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/preset-typescript": "^7.10.4",
-    "@esri/arcgis-rest-types": "^3.0.5",
-    "@types/arcgis-js-api": "^4.17.0",
+    "@babel/preset-env": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.14.5",
+    "@babel/runtime": "^7.14.6",
     "@types/classnames": "^2.2.10",
-    "@types/d3": "^5.16.3",
     "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.37",
-    "@types/react": "^16.9.52",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-redux": "^7.1.11",
+    "@types/node": "^20.5.1",
+    "@types/react-redux": "^7.1.16",
     "@types/react-responsive": "^8.0.2",
-    "@types/shortid": "0.0.29",
-    "@types/styled-components": "^5.1.4",
-    "@typescript-eslint/eslint-plugin": "^4.8.1",
-    "@typescript-eslint/parser": "^4.8.1",
-    "babel-loader": "^8.1.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.3.2",
-    "css-loader": "^3.6.0",
-    "eslint": "^7.13.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
-    "file-loader": "^5.1.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "husky": "^4.3.0",
-    "isomorphic-form-data": "^2.0.0",
+    "@types/redux-mock-store": "^1.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
+    "@vue/preload-webpack-plugin": "^2.0.0",
+    "autoprefixer": "^10.2.6",
+    "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^9.0.0",
+    "css-loader": "^5.2.6",
+    "css-minimizer-webpack-plugin": "^3.0.1",
+    "eslint": "^8.22.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^6.3.3",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.1",
+    "husky": "^8.0.1",
     "jest": "^26.6.3",
-    "lint-staged": "^10.5.1",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-fetch": "^2.6.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "prettier": "^2.1.2",
-    "resolve-url-loader": "^3.1.2",
-    "source-map-loader": "^0.2.4",
-    "style-loader": "^1.3.0",
-    "terser-webpack-plugin": "^2.3.8",
-    "typescript": "^3.9.7",
-    "url-loader": "^3.0.0",
-    "webpack": "^4.44.2",
-    "webpack-bundle-analyzer": "^3.9.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "lint-staged": "^13.0.3",
+    "mini-css-extract-plugin": "^1.6.0",
+    "postcss": "^8.3.5",
+    "postcss-import": "^15.1.0",
+    "postcss-loader": "^6.1.0",
+    "postcss-preset-env": "^6.7.0",
+    "prettier": "^2.7.1",
+    "source-map-loader": "^3.0.0",
+    "tailwindcss": "^3.0.24",
+    "terser-webpack-plugin": "^5.1.3",
+    "typescript": "^4.3.4",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.88.2",
+    "webpack-bundle-analyzer": "^4.4.2",
+    "webpack-cli": "4.10",
+    "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
     "@esri/arcgis-rest-feature-layer": "^3.0.5",
     "@esri/arcgis-rest-request": "^3.0.0",
-    "@reduxjs/toolkit": "^1.5.1",
-    "axios": "^0.21.1",
+    "@reduxjs/toolkit": "1.8",
+    "@types/arcgis-js-api": "^4.23.1",
+    "@types/d3": "^7.4.0",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.5",
+    "@vannizhang/react-d3-charts": "^1.0.17",
+    "axios": "^0.21.2",
     "calcite-web": "github:Esri/calcite-web#v1.2.5",
     "classnames": "^2.2.6",
-    "d3": "^5.16.0",
-    "esri-loader": "^3.0.0",
+    "d3": "^7.8.5",
+    "esri-loader": "^3.5.0",
     "helper-toolkit-ts": "^1.1.13",
     "isomorphic-fetch": "^3.0.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.1",
-    "redux": "^4.0.5",
-    "shortid": "^2.2.15",
+    "isomorphic-form-data": "^2.0.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-redux": "^8.0.2",
+    "redux": "^4.1.0",
     "styled-components": "^5.2.1"
   },
   "resolutions": {
