--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/react-redux": "^7.1.16",
     "@types/react-responsive": "^8.0.2",
     "@types/redux-mock-store": "^1.0.3",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
     "@vue/preload-webpack-plugin": "^2.0.0",
@@ -81,7 +82,7 @@
     "@types/d3": "^7.4.0",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
-    "@vannizhang/react-d3-charts": "^1.0.17",
+    "@vannizhang/react-d3-charts": "^1.0.18",
     "axios": "^0.21.2",
     "calcite-web": "github:Esri/calcite-web#v1.2.5",
     "classnames": "^2.2.6",
